# idoit

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: structure.md
src/: aliases.rs  cache.rs  cli.rs  macros.rs  main.rs  parser.rs
src/ai/: client.rs  mod.rs  prompt.rs  provider.rs  retry.rs  stream.rs  types.rs
src/ai/providers/: anthropic.rs  deepseek.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/cli/: candidates.rs  clipboard.rs  confirm.rs  mod.rs  output.rs  spinner.rs
src/commands/: config_cmd.rs  config_wizard.rs  dispatch.rs  explain.rs  fix.rs  init.rs  last.rs  macro_cmd.rs  mod.rs  prompt_cmd.rs  refine.rs  run.rs  setup.rs  show_config.rs  translate.rs  tui_cmd.rs
src/config/: mod.rs  settings.rs
src/macros/: mod.rs
src/parser/: mod.rs
src/session/: context.rs  mod.rs  persisted.rs  terminal_log.rs
src/shell/: command_safety.rs  context.rs  executor.rs  history.rs  init.rs  mod.rs  rc.rs
src/tui/: ai_coordinator.rs  app.rs  completion.rs  draw.rs  keys.rs  mod.rs  terminal.rs
src/ui/: clipboard.rs  confirm.rs  mod.rs  output.rs  spinner.rs
