[package]
name = "idoit"
version = "0.2.0"
edition = "2021"
description = "AI-powered command line simplifier — do it!"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
