[package]
name = "idoit"
version = "0.2.1"
edition = "2021"
description = "AI-powered command line simplifier — do it!"
license = "MIT"
repository = "https://github.com/Furry-Monster/idoit"
readme = "README.md"
keywords = ["cli", "ai", "shell", "llm", "natural-language"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
dirs = "6"
anyhow = "1"
dialoguer = "0.12"
indicatif = "0.18"
console = "0.16"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
